# instaBOT

./: bot.py  pyproject.toml  req.txt
