[tool.poetry]
name = "hack_bot"
version = "0.1.0"
description = ""
authors = ["nurayim <temirbekovanuraiym546@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.18.1"
instagram = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
